--- a/shop/templates/shop/homepage.html
+++ b/shop/templates/shop/homepage.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html>
+{% extends 'shop/base.html' %}
+{% load staticfiles %}
 
-<html>
-    <head>
-        <title>Homepage</title>
-    </head>
+{% block title_block %}
+    Homepage
+{% endblock %}
 
-    <body>
-        <h1>Placeholder homepage</h1>
-        <p>This is a placeholder page for the homepage.</p>
-    </body>
-</html>
+{% block body_block %}
+<h1>Homepage Placeholder</h1>
+<p>Placeholder text</p>
+{% endblock %}
