Added slugs to the Models, added a review form, and modified views to make use of the new slugs.

--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -26,6 +26,7 @@
                 {% if user.is_authenticated %}
                 <li><a href="{% url 'auth_logout' %}?next={% url 'shop:homepage' %}">Logout</a></li>
                 <li><a href="{% url 'auth_password_change' %}">Change Password</a></li>
+                <li><a href="{% url 'shop:add_product' %}">Add Product</a></li>
                 {% else %}
                 <li><a href="{% url 'registration_register' %}">Sign Up</a></li>
                 <li><a href="{% url 'auth_login' %}">Login</a></li>
