--- a/templates/shop/homepage.html
+++ b/templates/shop/homepage.html
@@ -6,6 +6,27 @@
 {% endblock %}
 
 {% block body_block %}
-<h1>Homepage Placeholder</h1>
-<p>Placeholder text</p>
+<div>
+    <h2>Most Viewed</h2>
+    <ul>
+    {% for product in most_viewed_products %}
+    <li>
+        <a href="{% url 'shop:view_product' product.slug %}"> {{ product.product_name }}</a>
+    </li>
+    {% endfor %}
+    </ul>
+</div>
+<div>
+    <h2>Recently Added</h2>
+    <ul>
+        {% for product in recently_added_products %}
+        <li>
+            <a href="{% url 'shop:view_product' product.slug %}"> {{ product.product_name }}</a>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+{% endblock %}
+
+{% block sidebar_block %}
 {% endblock %}
