Added the bootstrap stuff to all the templates we have so far

--- a/templates/registration/registration_closed.html
+++ b/templates/registration/registration_closed.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block body_block %}
+<div class="container text-center">
     <h1>Registration Closed</h1>
     <p>Unfortunately, registration is currently closed. Please try again later!</p>
+</div>
 {% endblock %}
