--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,12 +5,16 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Login</h1>
-    <form method="post" action=".">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Log In" />
-        <input type="hidden" name="next" value="{{ next }}" />
-    </form>
-    <p>Not registered?<a href="{% url 'registration_register' %}">Register here!</a></p>
+<div class="row">
+    <div class="col-md-6 offset-md-3">
+        <h1 class="mb-4">Login</h1>
+        <form method="post" action="." class="needs-validation" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Log In</button>
+            <input type="hidden" name="next" value="{{ next }}" />
+        </form>
+        <p class="mt-3">Not registered? <a href="{% url 'registration_register' %}">Register here!</a></p>
+    </div>
+</div>
 {% endblock %}
