--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -5,8 +5,8 @@
 {% endblock %}
 
 {% block body_block %}
+<div class="container text-center">
     <h1>Logged Out</h1>
-    <p>
-    You have been successfully logged out. Thanks for spending time on Rango!
-    </p>
+    <p>You have been successfully logged out. Thanks for spending time at Bob's Gadgets!</p>
+</div>
 {% endblock %}
