--- a/templates/shop/add_product.html
+++ b/templates/shop/add_product.html
@@ -1,4 +1,3 @@
-
 {% extends 'shop/base.html' %}
 
 {% block title_block %}
@@ -6,12 +5,14 @@
 {% endblock %}
 
 {% block body_block %}
-    <h1>Add a New Product</h1>
-    <form id="product_form" method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" name="submit" value="Submit" />
-    </form>
+<div class="row">
+    <div class="col-md-8 offset-md-2">
+        <h1>Add a New Product</h1>
+        <form id="product_form" method="post" enctype="multipart/form-data" class="needs-validation" novalidate>
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
-
-
