--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -1,5 +1,6 @@
-{% load staticfiles %}
 <!DOCTYPE html>
+{% load staticfiles %}
+{% load shop_template_tags %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -37,16 +38,28 @@
     </nav>
 
     <!-- Main content -->
-    <div class="container mt-4">
-        {% block body_block %}
-        {% endblock %}
+
+    <div class="container-fluid">
+      <div class="row">
+          <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+              <div class="sidebar-sticky">
+              {% block sidebar_block %}
+                  {% get_category_list category %}
+              {% endblock %}
+              </div>
+          </nav>
+          
+          <main role="main" class="col-md-9  ml-sm-auto col-lg-10 px-4">		
+            {% block body_block %}{% endblock %}
+              
+            <!-- FOOTER -->
+            <footer class="container text-center">
+              <p>&copy; Bob's Gadgets {% now "Y" %}</p>
+            </footer>
+          </main>
+      </div>
     </div>
-
-    <hr>
-    <footer class="container text-center">
-        <p>&copy; Bob's Gadgets {% now "Y" %}</p>
-    </footer>
-
+  
     <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
