--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -17,6 +17,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'shop:homepage' %}">Bob's Gadgets</a>
+        <!-- Search form - Redirects to search.html -->
+        <form method = "POST" action="{% url 'shop:search' %}">
+          {% csrf_token %}
+          {{ search_form.as_p }}
+        </form>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
                 data-bs-target="#navbarContent" aria-controls="navbarContent" 
                 aria-expanded="false" aria-label="Toggle navigation">
