--- a/templates/shop/category.html
+++ b/templates/shop/category.html
@@ -12,9 +12,22 @@
 {%block body_block %}
     <h1>Products in {{category.name}}</h1>
     <ul>
+        <div class="row">
         {% for product in products %}
-        <li><a href="{% url 'shop:view_product' product.slug %}"> {{product.product_name}} </a></li>
+        <div class="col-md-6 product-box">
+        <a href="{% url 'shop:view_product' product.slug %}">
+            {% if product.image_reference %}
+                <img src="{{ product.image_reference.url}}" alt="{{ product.product_name}}"/>
+            {% else %}
+                <p>No image available</p>
+            {% endif %}
+            <p>{{ product.product_name }}<br>
+            £{{ product.price }}<br>
+            Rating: {{ product.average_rating }}</p>
+        </a>    
+        </div>
         {% endfor %}
+        </div>
     </ul>
 {% endblock %}
     
