--- a/templates/shop/search.html
+++ b/templates/shop/search.html
@@ -6,8 +6,21 @@
 
 {% block body_block %}
     <ul>
+        <div class="row">
         {% for product in products %}
-        <a href="{% url 'shop:view_product' product.slug %}"> {{ product.product_name }}</a>
+        <div class="col-md-6 product-box">
+        <a href="{% url 'shop:view_product' product.slug %}">
+            {% if product.image_reference %}
+                <img src="{{ product.image_reference.url}}" alt="{{ product.product_name}}"/>
+            {% else %}
+                <p>No image available</p>
+            {% endif %}
+            <p>{{ product.product_name }}<br>
+            £{{ product.price }}<br>
+            Rating: {{ product.average_rating }}</p>
+        </a>    
+        </div>
         {% endfor %}
+        </div>
     </ul>
 {% endblock %}
