--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -33,6 +33,8 @@
             {% if user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'auth_logout' %}?next={% url 'shop:homepage' %}">Logout</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'auth_password_change' %}">Change Password</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'shop:edit_balance' %}">Edit Balance</a></li>
+                <li class="nav-item"><p class="nav-link"> £{{ user_balance }}</p></li>
             {% else %}
                 <li class="nav-item"><a class="nav-link" href="{% url 'registration_register' %}">Sign Up</a></li>
                 <li class="nav-item"><a class="nav-link" href="{% url 'auth_login' %}">Login</a></li>
