--- a/templates/shop/view_product.html
+++ b/templates/shop/view_product.html
@@ -23,6 +23,7 @@
 
     {% if user.is_authenticated %}
         <a href="{% url 'shop:add_to_wishlist' product.slug %}" class="btn btn-primary mt-3">Add to Wishlist</a>
+        <a href="{% url 'shop:add_to_basket' product.slug %}" class="btn btn-primary mt-3">Add to Basket</a>
     {% endif %}
 
     <h2 class="mt-5">Reviews</h2>
