created bootstrap for css and made changes to the look of homepage and login page (still need to be improved

--- a/static/shop/css/style.css
+++ b/static/shop/css/style.css
@@ -16,3 +16,17 @@
     color: black;
     font-weight:bold;
 }
+.container-fluid {
+    min-height: 100vh; 
+    display: flex;
+    flex-direction: column;
+}
+.row {
+    flex: 1; 
+}
+main {
+    padding: 20px; 
+}
+.sidebar {
+    background-color: white; 
+}
