--- a/templates/shop/view_product.html
+++ b/templates/shop/view_product.html
@@ -1,5 +1,5 @@
 {% extends 'shop/base.html' %}
-{% load staticfiles %}
+{% load static %}
 
 {% block title_block %}
     {{ product.product_name }}
