--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,17 +5,26 @@
 {% endblock %}
 
 {% block body_block %}
-<h1> Login </h1>
 <div class="container">
-    <form class="form-signin" role="form" method="post" action=".">
-    {% csrf_token %}
-    <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" name="username" id="id_username" class="form-control"
-    placeholder="Username" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" name="password" id="id_password" class="form-control"
-    placeholder="Password" required>
-    <button class="btn btn-lg btn-primary btn-block" type="submit"value="Submit">Sign in</button>
-</form>
-</div>    
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+            <h1 class="text-center">Login</h1>
+            <form class="form-signin" role="form" method="post" action=".">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="inputUsername" class="sr-only">Username</label>
+                    <input type="text" name="username" id="id_username" class="form-control" placeholder="Username" required autofocus>
+                </div>
+                <div class="form-group">
+                    <label for="inputPassword" class="sr-only">Password</label>
+                    <input type="password" name="password" id="id_password" class="form-control" placeholder="Password" required>
+                </div>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            </form>
+            <div class="text-center mt-3">
+                <p>Don't have an account? <a href="{% url 'registration_register' %}">Sign Up</a></p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
