--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -5,8 +5,29 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="container text-center">
-    <h1>Logged Out</h1>
-    <p>You have been successfully logged out. Thanks for spending time at Bob's Gadgets!</p>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-10"> 
+        <h2 class="text-center">Logout Successful. Thanks for spending time at Bob's Gadgets!</h2>
+        <p class="text-center">You will be redirected to the homepage in <span id="countdown">3</span> seconds.</p>
+        <p class="text-center">If you are not redirected, <a href="{% url 'shop:homepage' %}">click here</a>.</p>
+        </div>
+    </div>
 </div>
+
+<!-- JS for countdown and redirecting back to homepage (derived from example on w3school) -->
+<script>
+    let countdownTime = 3;
+    const countdownElement = document.getElementById('countdown');
+
+    const countdownInterval = setInterval(() => {
+        countdownTime--;
+        countdownElement.textContent = countdownTime;
+        if (countdownTime <= 0) {
+            clearInterval(countdownInterval);
+            window.location.href = "{% url 'shop:homepage' %}";
+        }
+    }, 1000);
+</script>
+
 {% endblock %}
