--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -10,7 +10,7 @@
         <div class="col-md-6 col-lg-5"> 
         <h1 class="text-center">Password Change Successful</h1>
         <div class="alert alert-success" role="alert">
-            our password has been successfully changed.
+            Your password has been successfully changed.
         </div>
         <p class="text-center">You will be redirected to the homepage in <span id="countdown">5</span> seconds.</p>
         <p class="text-center">If you are not redirected, <a href="{% url 'shop:homepage' %}">click here</a>.</p>
