--- a/templates/shop/account.html
+++ b/templates/shop/account.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'shop/base.html' %}
 
 {% block title_block %}
     Account
@@ -7,12 +7,21 @@
 {% block body_block %}
 <div>
     {% if userAccount.account_img %}
-        <img src="userAccount.account_img" alt="{{ user.username }}'s account image" class="img-fluid mb-4">
+        <img src="{{ userAccount.account_img.url }}" alt="{{ user.username }}'s account image" class="img-fluid mb-4">
     {% endif %}
     <ul class="nav flex-column">
         <li>{{ user.username }}</li>
-        <li>{{ user.firstname }}</li>
-        <li>{{ user.surname }}</li>
+        <li>{{ user.first_name }}</li>
+        <li>{{ user.last_name }}</li>
     </ul>
+</div>
+<div>
+    <ul class="nav flex-column">
+        <li><button id="change_name" 
+            data-userid="{{ user.id }}"
+            class="btn btn-primary btn-sm" 
+            type="button"><span data-feather="feather"></span>
+        Change Name</button></li>
+    </ul> 
 </div>
 {% endblock %}
