--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -11,6 +11,8 @@
     <link href="https://getbootstrap.com/docs/4.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'shop/css/style.css' %}">
+    <!-- favicon -->
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
 </head>
 <body>
   <header>
@@ -59,9 +61,13 @@
                   <h3>Account</h3>
                   <ul class="nav flex-column">
                     {% if user.is_authenticated %}
+                    <li clas="nav-item">
+                      <a class="nav-link" href="{% url 'shop:view_account' %}">
+                        <span data-feather="archive"></span>View Account</a>
+                    </li>
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'auth_logout' %}">
-                          <span data-feather="archive"></span>Logout</a>
+                        <span data-feather="archive"></span>Logout</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="{% url 'shop:wishlist_detail' %}">
@@ -102,5 +108,7 @@
     <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
     <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
+    <!-- ajax -->
+    <script src="{% static 'js/ajax.js' %}"></script>
 </body>
 </html>
