--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -108,7 +108,8 @@
     <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
     <script src="https://getbootstrap.com/docs/4.2/examples/dashboard/dashboard.js"></script>
-    <!-- ajax -->
+    <!-- Static JS -->
     <script src="{% static 'js/ajax.js' %}"></script>
+    <script src="{% static 'js/jquery.js' %}"></script>
 </body>
 </html>
