Finished accounts page

--- a/static/shop/css/style.css
+++ b/static/shop/css/style.css
@@ -16,6 +16,18 @@
     color: black;
     font-weight:bold;
 }
+
+/* Account Page CSS */
+.account-box {
+    background-color: #f8f9fa;
+    padding: 10px;
+    border-radius: 5%;
+}
+
+.account-box img {
+    float: left;
+}
+
 .container-fluid {
     min-height: 100vh; 
     display: flex;
