--- a/templates/shop/change_account_info.html
+++ b/templates/shop/change_account_info.html
@@ -8,7 +8,7 @@
         {% if message %}
         <p> {{ message }} </p>
         {% endif %}
-        <form role="form"  method="post" action=".">
+        <form role="form" enctype="multipart/form-data" method="post" action=".">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Submit</button>
