--- a/templates/shop/change_account_info.html
+++ b/templates/shop/change_account_info.html
@@ -1,6 +1,10 @@
 {% extends 'shop/base.html' %}
 {% load staticfiles %}
 
+{% block title_block %}
+    {{ change }}
+{% endblock %}
+
 {% block body_block %}
 <div class="row">
     <div class="col-md-8 offset-md-2">
