--- a/templates/shop/account.html
+++ b/templates/shop/account.html
@@ -22,7 +22,7 @@
         <ul class="nav flex-column" id="account-interactions">
             <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'shop:change_name' %}">Change Name</a></li>
             <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'shop:change_username' %}">Change Username</a></li>
-            <li class="navitem"><a class="btn btn-primary mt-3" href="{% url 'shop:change_profile_img' %}">Change Profile Picture</a></li>
+            <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'shop:change_profile_img' %}">Change Profile Picture</a></li>
             <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'auth_password_change' %}">Change Password</a></li>
             <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'shop:change_balance' %}">Change Balance</a></li>
             <li class="nav-item"><a class="btn btn-primary mt-3" href="{% url 'shop:view_orders' %}">View Orders</a></li>
