--- a/templates/shop/view_product.html
+++ b/templates/shop/view_product.html
@@ -6,36 +6,46 @@
 {% endblock %}
 
 {% block body_block %}
-<div class="container" id="product-data" product-id=" {{ product.product_ID }}">
-    <h1 class="mb-4">{{ product.product_name }}</h1>
+<div>
+<h1 class="mb-4">{{ product.product_name }}</h1>
+    <div class="container row product-view" id="product-data" product-id=" {{ product.product_ID }}">
 
-    {% if product.image_reference %}
-        <img src="{{ product.image_reference.url }}" alt="{{ product.product_name }}" class="img-fluid mb-4">
-    {% else %}
-        <p>No image available</p>
-    {% endif %}
+        {% if product.image_reference %}
+            <img src="{{ product.image_reference.url }}" alt="{{ product.product_name }}" class="img-fluid mb-4">
+        {% else %}
+            <p>No image available</p>
+        {% endif %}
 
-    <p><strong>Description:</strong> {{ product.description }}</p>
-    <p><strong>Rating: </strong> {{ product.average_rating }}</p>
-    <p><strong>Price:</strong> ${{ product.price }}</p>
-    <p><strong>Quantity:</strong> {{ product.quantity }}</p>
-    <p><strong>Seller:</strong> {{ product.seller }}</p>
-    <p><strong>Added On:</strong> {{ product.date_added }}</p>
+        <ul class="nav flex-column">
+            <li class="nav-item"><strong>Description:</strong> {{ product.description }}</li>
+            <li><strong>Rating: </strong> {{ product.average_rating }}</li>
+            <li><strong>Price:</strong> ${{ product.price }}</li>
+            <li><strong>Quantity:</strong> {{ product.quantity }}</li>
+            <li><strong>Seller:</strong> {{ product.seller }}</li>
+            <li><strong>Added On:</strong> {{ product.date_added }}</li>
+        </ul>
 
-    {% if user.is_authenticated %}
+        <br />
+
+    </div>
+</div>
+{% if user.is_authenticated %}
+<div class="row product-interact">
         <a href="{% url 'shop:add_to_wishlist' product.slug %}" class="btn btn-primary mt-3">Add to Wishlist</a>
         <a href="{% url 'shop:add_to_basket' product.slug %}" class="btn btn-primary mt-3">Add to Basket</a>
         <a href="{% url 'shop:add_rating' product.slug %}" class="btn btn-primary mt-3">Add Rating</a>
-    {% endif %}
 </div>
-<div class="container" id="reviews">
+{% endif %}
+<div>
     <h2>Reviews</h2>
-    {% for r in reviews %}
-        <div class="review-box">
-            <h3>{{ r.reviewer.username }}</h3>
-            <p>{{ r.rating }}</p>
-            <p>{{ r.comment }}</p>
-        </div>
-    {% endfor %}
+    <div class="container row" id="reviews">
+        {% for r in reviews %}
+            <div class="review-box">
+                <h3>{{ r.reviewer.username }}</h3>
+                <p>{{ r.rating }} Star</p>
+                <p id="review-message">{{ r.comment }}</p>
+            </div>
+        {% endfor %}
+    </div>
 </div>
 {% endblock %}
