Fixed bug on accounts.html where surname and username were mixed up.

--- a/templates/shop/account.html
+++ b/templates/shop/account.html
@@ -15,8 +15,8 @@
     </div>
     <div class="account-box col-md-2">
         <ul class="nav flex-column">
-            <li><p>Name: {{ user.username }} {{ user.first_name }}</p></li>
-            <li><p>Username: {{ user.last_name }}</p></li>
+            <li><p>Name: {{ user.first_name }} {{ user.last_name }}</p></li>
+            <li><p>Username: {{ user.username }}</p></li>
             <li><p>Balance: {{ userAccount.balance }}</p></li>
         </ul>
     </div>
