--- a/templates/shop/add_product.html
+++ b/templates/shop/add_product.html
@@ -10,7 +10,7 @@
 <div class="row">
     <div class="col-md-8 offset-md-2">
         <h1>Add a New Product</h1>
-        <form role="form" id="search_form" method="post" action=".">
+        <form role="form" id="search_form" method="post" action="." enctype="multipart/form-data">
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="btn btn-primary">Submit</button>
