--- a/templates/shop/base.html
+++ b/templates/shop/base.html
@@ -72,7 +72,7 @@
                     </li>
                     {% else %}
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'registration_register' %}">
+                      <a class="nav-link" href="{% url 'registration_register' %}?next={% url 'shop:homepage' %}">
                           <span data-feather="archive"></span>Register</a>
                     </li>
                     <li class="nav-item">
